# ImageDetectApp-serv

./: .env  .env.public  .flaskenv  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  data.py  model.py  routes.py
models/: model_log.json
notebooks/: main.ipynb  with_torch.ipynb
params/: process_model.yml
